--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,35 @@
             color: white;
             line-height: 20px;
         }
+        .experience-bar-container {
+            position: relative;
+            width: 100%;
+            margin-top: 10px;
+        }
+        .experience-bar-text {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            color: black;
+            line-height: 20px;
+        }
+        progress.experience-bar {
+            width: 100%;
+            height: 20px;
+            appearance: none;
+        }
+        progress.experience-bar::-webkit-progress-bar {
+            background-color: #ccc;
+            border-radius: 5px;
+        }
+        progress.experience-bar::-webkit-progress-value {
+            background-color: yellow;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -59,6 +88,10 @@
                 <div class="health-bar-container">
                     <progress id="player-health-bar" value="200" max="200"></progress>
                     <div class="health-bar-text" id="player-health-text">200 / 200</div>
+                </div>
+                <div class="experience-bar-container">
+                    <progress id="player-experience-bar" class="experience-bar" value="0" max="100"></progress>
+                    <div class="experience-bar-text" id="player-experience-text">0 / 100</div>
                 </div>
                 <p>Attack: <span id="player-attack">10</span></p>
                 <p>Defense: <span id="player-defense">5</span></p>
