Add 3 new enemy types and change testenvironement to jsdom

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@
             </div>
             <div id="enemy-stats">
                 <h2>Enemy</h2>
+                <div id="enemy-name">Unknown</div> <!-- Added this line -->
                 <div class="health-bar-container">
                     <progress id="enemy-health-bar" value="50" max="50"></progress>
                     <div class="health-bar-text" id="enemy-health-text">50 / 50</div>
